--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -1,5 +1,5 @@
 # https://github.com/elastic/kibana-docker
-FROM docker.elastic.co/kibana/kibana:5.5.1
+FROM shayadocker:10/kibana/kibana:5.4.0
 
 # Add your kibana plugins setup here
 # Example: RUN kibana-plugin install <name|url>
